--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-Vell's Stuff
+<h1>Vell's Stuff</h1>
 
 </p>
 
-<a href="http://localhost:8080/walkthrough/image-test-1/app-files/">image-test-1</a>
+<a href="./walkthrough/image-test-1/app-files/index.html">image-test-1</a>
